Kubernetes/k8s/old/videomanagementservice.yml
---
apiVersion: v1
kind: Service
metadata:
  name: videoservice-vms
spec:
  ports:
    - port: 8090
  selector:
    app:  videoservice-vms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videoservice-vms
spec:
  selector:
    matchLabels:
      app: videoservice-vms
  template:
    metadata:
      labels:
        app: videoservice-vms
    spec:
      containers:
        - name: videoservice-vms
          image: videoservice-vms:latest
          ports:
            - containerPort: 8090
          volumeMounts:
            - mountPath: /var/video
              name: videoservice-volume
      volumes:
        - name: videoservice-volume
          hostPath:
            path: /var/video
            type: DirectoryOrCreate
