Kubernetes/k8s/old/videoprocessingservice.yml
---
apiVersion: v1
kind: Service
metadata:
  name: videoservice-vps
spec:
  ports:
  - port: 8090
  selector:
    app:  videoservice-vps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videoservice-vps
spec:
  selector:
    matchLabels:
      app: videoservice-vps
  template:
    metadata:
      labels:
        app: videoservice-vps
    spec:
      containers:
      - name: videoservice-vps
        image: videoservice-vps:latest
        ports:
        - containerPort: 9090
        volumeMounts:
          - mountPath: /var/video
            name: videoservice-volume
      volumes:
      - name: videoservice-volume
        hostPath:
            path: /var/video
            type: DirectoryOrCreate
