Kubernetes/k8s/old/apigateway.yml
---
apiVersion: v1
kind: Ingress
metadata:
  name: videoservice-apigatawey
spec:
  ports:
    - port: 8080
  selector:
    app:  videoservice-apigatawey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videoservice-apigatawey
spec:
  selector:
    matchLabels:
      app: videoservice-apigatawey
  template:
    metadata:
      labels:
        app: videoservice-apigatawey
    spec:
      containers:
        - name: videoservice-apigatawey
          image: videoservice/apigateway:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/video
              name: videoservice-volume
      volumes:
        - name: videoservice-volume
          hostPath:
            path: /var/video
            type: DirectoryOrCreate
